--- a/index.html
+++ b/index.html
@@ -22,42 +22,47 @@
   <div class="container">
     <!-- Timeblocks go here -->
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">9AM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">10AM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">11AM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">12PM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">1PM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">2PM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1">3PM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row">
+      <div class="col-1">4PM</div>
+      <div class="col-10"></div>
       <div class="col-1"></div>
+    </div>
+    <div class="row">
+      <div class="col-1">5PM</div>
       <div class="col-10"></div>
       <div class="col-1"></div>
     </div>
