--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
+  <div id="planner" class="container">
     <!-- Timeblocks go here -->
     <div class="row">
       <div class="col-1">9AM</div>
