adding hour class to first column of each row

--- a/index.html
+++ b/index.html
@@ -22,47 +22,47 @@
   <div id="planner" class="container">
     <!-- Timeblocks go here -->
     <div class="row time-block">
-      <div class="col-1">9AM</div>
+      <div class="hour col-1">9AM</div>
       <div id="9" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">10AM</div>
+      <div class="hour col-1">10AM</div>
       <div id="10" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">11AM</div>
+      <div class="hour col-1">11AM</div>
       <div id="11" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">12PM</div>
+      <div class="hour col-1">12PM</div>
       <div id="12" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">1PM</div>
+      <div class="hour col-1">1PM</div>
       <div id="13" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">2PM</div>
+      <div class="hour col-1">2PM</div>
       <div id="14" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">3PM</div>
+      <div class="hour col-1">3PM</div>
       <div id="15" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">4PM</div>
+      <div class="hour col-1">4PM</div>
       <div id="16" class="col-10"></div>
       <div class="col-1"></div>
     </div>
     <div class="row time-block">
-      <div class="col-1">5PM</div>
+      <div class="hour col-1">5PM</div>
       <div id="17" class="col-10"></div>
       <div class="col-1"></div>
     </div>
