--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     <!-- Timeblocks go here -->
     <div class="row time-block">
       <div class="hour col-1">9AM</div>
-      <div id="9" class="col-10"></div>
+      <div id="9" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -32,7 +38,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">10AM</div>
-      <div id="10" class="col-10"></div>
+      <div id="10" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -41,7 +53,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">11AM</div>
-      <div id="11" class="col-10"></div>
+      <div id="11" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -50,7 +68,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">12PM</div>
-      <div id="12" class="col-10"></div>
+      <div id="12" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -59,7 +83,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">1PM</div>
-      <div id="13" class="col-10"></div>
+      <div id="13" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -68,7 +98,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">2PM</div>
-      <div id="14" class="col-10"></div>
+      <div id="14" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -77,7 +113,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">3PM</div>
-      <div id="15" class="col-10"></div>
+      <div id="15" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -86,7 +128,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">4PM</div>
-      <div id="16" class="col-10"></div>
+      <div id="16" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
@@ -95,7 +143,13 @@
     </div>
     <div class="row time-block">
       <div class="hour col-1">5PM</div>
-      <div id="17" class="col-10"></div>
+      <div id="17" class="col-10 h-100">
+        <div class="h-100">
+          <div class="col-12 wrapper w-100 h-100">
+            <textarea name="" id="" cols="11" rows="1"></textarea>
+          </div>
+        </div>
+      </div>
       <div class="col-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
