--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </header>
   <div id="planner" class="container">
     <!-- Timeblocks go here -->
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">9AM</div>
-      <div id="9" class="col-10 h-100">
-        <div class="h-100">
+      <div id="9" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -36,10 +36,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">10AM</div>
-      <div id="10" class="col-10 h-100">
-        <div class="h-100">
+      <div id="10" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -51,10 +51,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">11AM</div>
-      <div id="11" class="col-10 h-100">
-        <div class="h-100">
+      <div id="11" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -66,10 +66,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">12PM</div>
-      <div id="12" class="col-10 h-100">
-        <div class="h-100">
+      <div id="12" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -81,10 +81,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">1PM</div>
-      <div id="13" class="col-10 h-100">
-        <div class="h-100">
+      <div id="13" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -96,10 +96,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">2PM</div>
-      <div id="14" class="col-10 h-100">
-        <div class="h-100">
+      <div id="14" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -111,10 +111,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">3PM</div>
-      <div id="15" class="col-10 h-100">
-        <div class="h-100">
+      <div id="15" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -126,10 +126,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">4PM</div>
-      <div id="16" class="col-10 h-100">
-        <div class="h-100">
+      <div id="16" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
@@ -141,10 +141,10 @@
         </button>
       </div>
     </div>
-    <div class="row time-block">
+    <div class="row time-block row-wrapper">
       <div class="hour col-1">5PM</div>
-      <div id="17" class="col-10 h-100">
-        <div class="h-100">
+      <div id="17" class="col-10 h-100 d-flex align-items-center">
+        <div class="row h-100 w-100">
           <div class="col-12 wrapper w-100 h-100">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
