--- a/index.html
+++ b/index.html
@@ -19,138 +19,138 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div id="planner" class="container">
+  <div id="planner" class="container my-5">
     <!-- Timeblocks go here -->
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">9AM</div>
-      <div id="9" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">9AM</div>
+      <div id="9" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">10AM</div>
-      <div id="10" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">10AM</div>
+      <div id="10" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">11AM</div>
-      <div id="11" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">11AM</div>
+      <div id="11" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">12PM</div>
-      <div id="12" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">12PM</div>
+      <div id="12" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">1PM</div>
-      <div id="13" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">1PM</div>
+      <div id="13" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">2PM</div>
-      <div id="14" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">2PM</div>
+      <div id="14" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">3PM</div>
-      <div id="15" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">3PM</div>
+      <div id="15" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">4PM</div>
-      <div id="16" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">4PM</div>
+      <div id="16" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
     <div class="row time-block row-wrapper">
-      <div class="hour col-1">5PM</div>
-      <div id="17" class="col-10 h-100 d-flex align-items-center">
+      <div class="hour col-2 col-lg-1">5PM</div>
+      <div id="17" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
           <div class="col-12 wrapper w-100 h-100">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-2 col-md-1 col-lg-1">
         <button class="saveBtn">
           <i class="fas fa-save"></i>
         </button>
