adding variable for planner body

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="hour col-2 col-lg-1">9AM</div>
       <div id="9" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -40,7 +40,7 @@
       <div class="hour col-2 col-lg-1">10AM</div>
       <div id="10" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -55,7 +55,7 @@
       <div class="hour col-2 col-lg-1">11AM</div>
       <div id="11" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -70,7 +70,7 @@
       <div class="hour col-2 col-lg-1">12PM</div>
       <div id="12" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -85,7 +85,7 @@
       <div class="hour col-2 col-lg-1">1PM</div>
       <div id="13" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -100,7 +100,7 @@
       <div class="hour col-2 col-lg-1">2PM</div>
       <div id="14" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -115,7 +115,7 @@
       <div class="hour col-2 col-lg-1">3PM</div>
       <div id="15" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
@@ -130,7 +130,7 @@
       <div class="hour col-2 col-lg-1">4PM</div>
       <div id="16" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
         <div class="row h-100 w-100">
-          <div class="col-12 wrapper">
+          <div class="col-12">
             <textarea name="" id="" cols="11" rows="1"></textarea>
           </div>
         </div>
