message displays that entry has been saved to local storage

--- a/index.html
+++ b/index.html
@@ -19,144 +19,146 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div id="planner" class="container my-5">
-    <!-- Timeblocks go here -->
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">9AM</div>
-      <div id="9" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-9" cols="11" rows="1"></textarea>
+  <main>
+    <div id="planner" class="container my-5">
+      <!-- Timeblocks go here -->
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">9AM</div>
+        <div id="9" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-9" cols="11" rows="1"></textarea>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">10AM</div>
-      <div id="10" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-10" cols="11" rows="1"></textarea>
-          </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">11AM</div>
-      <div id="11" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-11" cols="11" rows="1"></textarea>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">10AM</div>
+        <div id="10" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-10" cols="11" rows="1"></textarea>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">12PM</div>
-      <div id="12" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-12" cols="11" rows="1"></textarea>
-          </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">1PM</div>
-      <div id="13" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-13" cols="11" rows="1"></textarea>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">11AM</div>
+        <div id="11" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-11" cols="11" rows="1"></textarea>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">2PM</div>
-      <div id="14" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-14" cols="11" rows="1"></textarea>
-          </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">3PM</div>
-      <div id="15" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-15" cols="11" rows="1"></textarea>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">12PM</div>
+        <div id="12" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-12" cols="11" rows="1"></textarea>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">4PM</div>
-      <div id="16" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12">
-            <textarea name="" id="entry-16" cols="11" rows="1"></textarea>
-          </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row time-block row-wrapper">
-      <div class="hour col-2 col-lg-1">5PM</div>
-      <div id="17" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
-        <div class="row h-100 w-100">
-          <div class="col-12 wrapper w-100 h-100">
-            <textarea name="" id="entry-17" cols="11" rows="1"></textarea>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">1PM</div>
+        <div id="13" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-13" cols="11" rows="1"></textarea>
+            </div>
           </div>
         </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
       </div>
-      <div class="col-2 col-md-1 col-lg-1">
-        <button class="saveBtn">
-          <i class="fas fa-save"></i>
-        </button>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">2PM</div>
+        <div id="14" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-14" cols="11" rows="1"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">3PM</div>
+        <div id="15" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-15" cols="11" rows="1"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">4PM</div>
+        <div id="16" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12">
+              <textarea name="" id="entry-16" cols="11" rows="1"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+      <div class="row time-block row-wrapper">
+        <div class="hour col-2 col-lg-1">5PM</div>
+        <div id="17" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
+          <div class="row h-100 w-100">
+            <div class="col-12 wrapper w-100 h-100">
+              <textarea name="" id="entry-17" cols="11" rows="1"></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="col-2 col-md-1 col-lg-1">
+          <button class="saveBtn">
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
