adding comments to HTML

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
+    <!-- Element displaying date -->
     <p id="currentDay" class="lead"></p>
   </header>
   <main>
     <div id="planner" class="container my-5">
       <!-- Timeblocks go here -->
+      <!-- Standard buisiness hours -- 9-5 -->
       <div class="row time-block row-wrapper">
         <div class="hour col-2 col-lg-1">9AM</div>
         <div id="9" class="col-8 col-md-9 col-lg-10 h-100 d-flex align-items-center">
